# WinGlide

./: CMakeLists.txt  Main.qml  hotkeyhandler.cpp  hotkeyhandler.h  main.cpp  windowpositioncontroller.cpp  windowpositioncontroller.h
